 NEWS/ChangeLog for rJava
--------------------------

0.8-0	(under development)
    o	new exception handling was introduced:

	Java exceptions are mapped to Exeception conditions which can
	be used to catch the exception at R level. The class name
	(without package path) of the exception is used as the
	subclass of Exception such that targetted handlers can be used:
	tryCatch(.jnew("foo"), NoClassDefFoundError=function(e) ...)

	In addition JNI code now causes an error instead of a warning,
	however, some errors internal to JNI may not have an associated
	Java exception and thus will fire the usual simpleError
	condition.

	As a consequence of the new error handling exception obejcts
	are now supplied in e$jobj of the handler and .jgetEx()
	becomes obsolete.


0.7-1	(under development)
    o	[RF] added .J high-level java constructor (based on reflection 
	as opposed to complete match as .jnew does)

    o	[RF] added .jinstanceof and instanceof operator

    o	when loaded into another JVM (e.g. via JRI), rJava would crash
	on any call if .jinit() was missing. Now it correctly reports
	the error.

    o	fixed synchronization issues in both JRI and REngine

0.7-0	2009-08-22
    o	fixed bug in $ getter of fields using old .jfield API

    o	fixed a bug in .jevalArray which failed when the signature
	was specified directly (and subsequently .jfield failed in
	most cases)

    o	improve speed of reflection-based API (.jrcall and `$')
	by using native array support in rJava

    o	reflection API now returns NULL invisibly for void results

    o	try to find the best match in reflection-based API
	using internal Java code (code and idea by
	Romain Francois)

    o	added with() method for jobjRef (by Romain Francois), see
	http://romainfrancois.blog.free.fr/index.php?
	post/2009/06/17/with-semantics-for-java-objects-in-rJava

    o	added names() method for jobjRef to facilitate code
	completion (based on code by RF: http://tr.im/w33B)

    o	update to JRI 0.5-0
