@@ -1,8 +1,9 @@
 exportPattern("^\\.j")
-export( ".J" )
+export( "J" )
 export( "%instanceof%" )
 export(is.jnull, .r2j, .rJava.base.path)
-exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar)
-exportMethods(show, "$", "$<-", "==", "!=", names)
+exportClasses(jobjRef, jarrayRef, jfloat, jlong, jbyte, jchar, jclassName)
+exportMethods(show, "$", "$<-", "==", "!=", names, new, as.character)
+importFrom(methods, new) 
 S3method(with, jobjRef)
 S3method(within, jobjRef)
