@@ -1,6 +1,7 @@
 \name{show}
 \alias{show,jobjRef-method}
 \alias{show,jarrayRef-method}
+\alias{show,jclassName-method}
 \title{Show a Java Object Reference}
 \description{
   Display a Java object reference in a descriptive, textual form. The
@@ -12,6 +13,7 @@
   \describe{
     \item{show}{\code{signature(object = "jobjRef")}: ... }
     \item{show}{\code{signature(object = "jarrayRef")}: ... }
+    \item{show}{\code{signature(object = "jclassName")}: ... }
   }
 }
 \keyword{interface}
