@@ -4,7 +4,7 @@
 0.8-0	(under development)
     o	new exception handling was introduced:
 
-	Java exceptions are mapped to Exeception conditions which can
+	Java exceptions are mapped to Exception conditions which can
 	be used to catch the exception at R level. The class name
 	(without package path) of the exception is used as the
 	subclass of Exception such that targetted handlers can be used:
@@ -15,9 +15,19 @@
 	Java exception and thus will fire the usual simpleError
 	condition.
 
-	As a consequence of the new error handling exception obejcts
+	As a consequence of the new error handling exception objects
 	are now supplied in e$jobj of the handler and .jgetEx()
 	becomes obsolete.
+
+    o	added new high-level API using the "J" function. It replaces
+	the previously used .J()/.jrnew() and .jrcall().
+
+	New Java objects are created using new(J("class"), ...) and
+	static methods and fields are accessed using J("class")$...
+	The corresponding implementation uses reflection in all cases.
+
+	An additional class jclassName was created to support static
+	calls to accessor methods such as $ and calls to new().
 
 
 0.7-1	(under development)
